@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2011-09-22 (SVN):
+    * screen.c, gl_screen.c, quakefs.h: Removed the unistd.h, io.h and
+      io_msvc.h includes. They aren't necessary since the removal of
+      the relevant CRT functions' direct usage since v1.5.0.
+
+2011-09-22 (SVN):
     * glquake.h: Removed extern declaration for d_15to8table[] which is
       non-existant since v1.5.0.
 
